--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad Ali Vahedifar — Researcher</title>
+    <title>Ali Vahedifar — Researcher</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Source+Sans+3:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         :root {
-            --bg-primary: #0B0E11;
-            --bg-secondary: #121820;
-            --bg-card: #161D27;
-            --bg-card-hover: #1A2332;
-            --accent: #4A9EBF;
-            --accent-glow: rgba(74, 158, 191, 0.15);
-            --accent-light: #6BB8D4;
-            --text-primary: #E8ECF0;
-            --text-secondary: #9AAAB8;
-            --text-muted: #6B7D8D;
-            --border: rgba(74, 158, 191, 0.12);
+            --bg-primary: #0A1628;
+            --bg-secondary: #0F1D32;
+            --bg-card: #132241;
+            --bg-card-hover: #17294D;
+            --accent: #5BA3D9;
+            --accent-glow: rgba(91, 163, 217, 0.12);
+            --accent-light: #7DB9E8;
+            --text-primary: #E8EDF4;
+            --text-secondary: #9FB1C6;
+            --text-muted: #6A7F99;
+            --border: rgba(91, 163, 217, 0.12);
             --serif: 'Cormorant Garamond', Georgia, serif;
             --sans: 'Source Sans 3', sans-serif;
         }
@@ -52,7 +53,7 @@
             right: -20%;
             width: 700px;
             height: 700px;
-            background: radial-gradient(circle, rgba(74, 158, 191, 0.06) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(91, 163, 217, 0.05) 0%, transparent 70%);
             animation: drift 20s ease-in-out infinite;
         }
         .ambient-bg::after {
@@ -62,7 +63,7 @@
             left: -10%;
             width: 500px;
             height: 500px;
-            background: radial-gradient(circle, rgba(74, 158, 191, 0.04) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(91, 163, 217, 0.03) 0%, transparent 70%);
             animation: drift 25s ease-in-out infinite reverse;
         }
         @keyframes drift {
@@ -78,7 +79,7 @@
             z-index: 100;
             padding: 1rem 2rem;
             backdrop-filter: blur(20px);
-            background: rgba(11, 14, 17, 0.8);
+            background: rgba(10, 22, 40, 0.85);
             border-bottom: 1px solid var(--border);
             transition: all 0.3s ease;
         }
@@ -218,7 +219,7 @@
             font-weight: 400;
             border: 1px solid var(--border);
             color: var(--text-secondary);
-            background: rgba(74, 158, 191, 0.04);
+            background: rgba(91, 163, 217, 0.05);
             letter-spacing: 0.03em;
         }
 
@@ -245,7 +246,7 @@
 
         /* ─── Featured Publication ─── */
         .featured-pub {
-            background: linear-gradient(135deg, var(--bg-card) 0%, rgba(74, 158, 191, 0.06) 100%);
+            background: linear-gradient(135deg, var(--bg-card) 0%, rgba(91, 163, 217, 0.06) 100%);
             border: 1px solid var(--border);
             border-radius: 12px;
             padding: 2rem 2.5rem;
@@ -262,7 +263,7 @@
             font-weight: 700;
             letter-spacing: 0.12em;
             color: var(--accent);
-            background: rgba(74, 158, 191, 0.1);
+            background: rgba(91, 163, 217, 0.1);
             padding: 0.25rem 0.7rem;
             border-radius: 4px;
         }
@@ -373,7 +374,7 @@
         }
         .exp-card:hover {
             background: var(--bg-card-hover);
-            border-color: rgba(74, 158, 191, 0.25);
+            border-color: rgba(91, 163, 217, 0.25);
         }
         .exp-date {
             font-size: 0.78rem;
@@ -416,7 +417,7 @@
         }
         .edu-card:hover {
             background: var(--bg-card-hover);
-            border-color: rgba(74, 158, 191, 0.25);
+            border-color: rgba(91, 163, 217, 0.25);
         }
         .edu-card .degree {
             font-family: var(--serif);
@@ -517,27 +518,24 @@
             </div>
             <div class="social-links">
                 <a href="https://scholar.google.com/citations?user=ZikkIk4AAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                <a href="https://arxiv.org/search/?query=Mohammad+Ali+Vahedifar&searchtype=author" target="_blank" title="arXiv"><i class="fas fa-file-alt"></i></a>
-                <a href="https://www.linkedin.com/in/vahedifar/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="mailto:vahedifar@ece.au.dk" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/ali-vahedi-04908518b/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:av@ece.au.dk" title="Email"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="hero-text">
-            <h1 class="fade-up delay-1">Mohammad Ali<br>Vahedifar</h1>
+            <h1 class="fade-up delay-1">Ali<br>Vahedifar</h1>
             <p class="tagline fade-up delay-2">PhD Researcher · Machine Learning · Information Theory</p>
             <p class="bio fade-up delay-3">
                 PhD student at <strong>Aarhus University</strong>, Department of Electrical and Computer Engineering, 
-                working on continual learning, signal prediction, and Shapley value methods for the Tactile Internet. 
+                working on continual learning and signal processing for the Tactile Internet. 
                 Former ML Engineer at <strong>Apple</strong> and <strong>Google</strong>. 
-                Founder of <strong>LoOp</strong>, a logistics optimization company in Denmark.
+                Founder of <strong>LoOp</strong>, a Logistic Optimizer AI company in Denmark.
             </p>
             <div class="hero-chips fade-up delay-4">
                 <span class="chip">Continual Learning</span>
-                <span class="chip">Computer Vision</span>
-                <span class="chip">Information Theory</span>
                 <span class="chip">Tactile Internet</span>
-                <span class="chip">Shapley Values</span>
-                <span class="chip">Signal Prediction</span>
+                <span class="chip">Signal Processing</span>
+                <span class="chip">Information Theory</span>
             </div>
         </div>
     </div>
@@ -549,7 +547,7 @@
     <hr class="section-rule">
 
     <div class="featured-pub">
-        <div class="venue">IEEE INFOCOM 2026 · Main Conference · Tokyo, Japan</div>
+        <div class="venue">IEEE INFOCOM 2026 · Tokyo, Japan</div>
         <div class="pub-title">Discrete Mode Decomposition Meets Shapley Value: Robust Signal Prediction in Tactile Internet</div>
         <div class="authors"><strong>Mohammad Ali Vahedifar</strong>, Qi Zhang</div>
         <p class="abstract">
@@ -563,13 +561,13 @@
 
     <div class="pub-item">
         <div class="venue">IEEE MLSP 2025</div>
-        <div class="pub-title"><a href="#">Signal Prediction for Loss Mitigation in Tactile Internet: A Leader-Follower Game-Theoretic Approach</a></div>
+        <div class="pub-title"><a href="https://ieeexplore.ieee.org/abstract/document/11204284">Signal Prediction for Loss Mitigation in Tactile Internet: A Leader-Follower Game-Theoretic Approach</a></div>
         <div class="authors"><strong>Mohammad Ali Vahedifar</strong>, Qi Zhang</div>
     </div>
 
     <div class="pub-item">
         <div class="venue">IEEE MLSP 2025</div>
-        <div class="pub-title"><a href="#">Shapley-Based Data Valuation with Mutual Information: A Key to Modified K-Nearest Neighbors</a></div>
+        <div class="pub-title"><a href="https://ieeexplore.ieee.org/abstract/document/11204262">Shapley-Based Data Valuation with Mutual Information: A Key to Modified K-Nearest Neighbors</a></div>
         <div class="authors"><strong>Mohammad Ali Vahedifar</strong>, Azim Akhtarshenas, Mohammad Rafatpanah, Maryam Sabbaghian</div>
     </div>
 
@@ -586,8 +584,8 @@
     </div>
 
     <div class="pub-item">
-        <div class="venue">arXiv Preprint 2023</div>
-        <div class="pub-title"><a href="https://arxiv.org/abs/2310.05269" target="_blank">Federated Learning: A Cutting-Edge Survey of the Latest Advancements and Applications</a></div>
+        <div class="venue">Computer Communications 2024</div>
+        <div class="pub-title"><a href="https://www.sciencedirect.com/science/article/abs/pii/S0140366424003116" target="_blank">Federated Learning: A Cutting-Edge Survey of the Latest Advancements and Applications</a></div>
         <div class="authors">Azim Akhtarshenas, <strong>Mohammad Ali Vahedifar</strong>, Navid Ayoobi, Behrouz Maham, Tohid Alizadeh, Sina Ebrahimi</div>
     </div>
 </section>
@@ -603,25 +601,25 @@
             <div class="exp-content">
                 <h3>Apple</h3>
                 <div class="exp-role">Machine Learning Engineer</div>
-                <p>Applied machine learning research and engineering at Apple, working on large-scale ML systems and model optimization.</p>
+                <p>Applied machine learning research and engineering at Apple, working on large-scale MLOps systems and model optimization.</p>
             </div>
         </div>
 
         <div class="exp-card">
-            <div class="exp-date">2024 — Present</div>
+            <div class="exp-date">2025 — Present</div>
             <div class="exp-content">
                 <h3>LoOp</h3>
-                <div class="exp-role">Founder · Logistics Optimization</div>
+                <div class="exp-role">Founder · Logistics Optimizer</div>
                 <p>Founded a logistics optimization company in Denmark, developing AI-driven solutions for supply chain and route optimization.</p>
             </div>
         </div>
 
         <div class="exp-card">
-            <div class="exp-date">2023 — Present</div>
+            <div class="exp-date">May-2024 — Present</div>
             <div class="exp-content">
                 <h3>Aarhus University</h3>
-                <div class="exp-role">PhD Researcher · TOAST Doctoral Network</div>
-                <p>Research on Edge Intelligence for Model-Augmented Haptic Teleoperation in Tactile Internet, funded by EU Horizon Europe. Advisor: Prof. Qi Zhang.</p>
+                <div class="exp-role">PhD Researcher · Marie Skłodowska-Curie Fellow · TOAST Doctoral Network</div>
+                <p>Research on Edge Intelligence for Model-Augmented Haptic Teleoperation in Tactile Internet, funded by EU Horizon Europe. Advisor: Prof. Qi Zhang. <a href="https://www.toast-dn.eu/" target="_blank" style="color: var(--accent);">TOAST Network →</a></p>
             </div>
         </div>
 
@@ -630,7 +628,7 @@
             <div class="exp-content">
                 <h3>Google</h3>
                 <div class="exp-role">Machine Learning Engineer</div>
-                <p>Developed and deployed machine learning models at scale, contributing to Google's ML infrastructure and research initiatives.</p>
+                <p>MLOps Engineer focused on pipeline optimization of large-scale machine learning.</p>
             </div>
         </div>
     </div>
@@ -643,25 +641,25 @@
 
     <div class="edu-grid">
         <div class="edu-card">
-            <div class="degree">Ph.D. in Electrical &amp; Computer Engineering</div>
+            <div class="degree">Ph.D. in Continual Learning for Tactile Internet</div>
             <div class="school">Aarhus University, Denmark</div>
-            <div class="gpa">GPA: 4.12 / 4.0 · 2023 — Present</div>
+            <div class="gpa">GPA: 4.12 / 4.0 · May 2024 — Present</div>
         </div>
         <div class="edu-card">
-            <div class="degree">M.Sc.</div>
+            <div class="degree">M.Sc. Information Theory</div>
             <div class="school">University of Sydney, Australia</div>
-            <div class="gpa">GPA: 3.88 / 4.0</div>
+            <div class="gpa">GPA: 3.88 / 4.0 · Oct 2020 — Feb 2023</div>
         </div>
         <div class="edu-card">
-            <div class="degree">M.Sc.</div>
+            <div class="degree">M.Sc. in Communication Systems Engineering</div>
             <div class="school">University of Tehran, Iran</div>
-            <div class="gpa"></div>
+            <div class="gpa">Oct 2021 — Oct 2023</div>
         </div>
     </div>
 </section>
 
 <footer>
-    <p>Mohammad Ali Vahedifar · <a href="mailto:vahedifar@ece.au.dk">vahedifar@ece.au.dk</a> · Aarhus, Denmark</p>
+    <p>Ali Vahedifar · <a href="mailto:av@ece.au.dk">av@ece.au.dk</a> · Aarhus, Denmark</p>
 </footer>
 
 <script>
