--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             </div>
         </div>
         <div class="hero-text">
-            <h1 class="fade-up delay-1">Ali<br>Vahedifar</h1>
+            <h1 class="fade-up delay-1">Ali Vahedifar</h1>
             <p class="tagline fade-up delay-2">PhD Researcher · Machine Learning · Information Theory</p>
             <p class="bio fade-up delay-3">
                 PhD student at <strong>Aarhus University</strong>, Department of Electrical and Computer Engineering, 
