--- a/index.html
+++ b/index.html
@@ -646,12 +646,12 @@
             <div class="gpa">GPA: 4.12 / 4.0 · May 2024 — Present</div>
         </div>
         <div class="edu-card">
-            <div class="degree">M.Sc. Information Theory</div>
+            <div class="degree">M.Sc. in Information Theory</div>
             <div class="school">University of Sydney, Australia</div>
             <div class="gpa">GPA: 3.88 / 4.0 · Oct 2020 — Feb 2023</div>
         </div>
         <div class="edu-card">
-            <div class="degree">M.Sc. in Communication Systems Engineering</div>
+            <div class="degree">M.Sc. in Communication Systems</div>
             <div class="school">University of Tehran, Iran</div>
             <div class="gpa">Oct 2021 — Oct 2023</div>
         </div>
